<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

		<!--  Controls -->
    <string name="buttonPair">Connect to Unity20</string>
    <string name="buttonRegister">Register 1</string>
    <string name="buttonRegister2">Register 2</string>
    <string name="buttonVerify">Verify</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonIdentify">Identify</string>
    <string name="buttonCapture">Capture</string>

</resources>
